--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
 <body class="landing">
     <nav>
     <nav class="navbar">
-        <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo" class="logo">
+        <a href="index.html" class="logo">
+            <img src="assets/images/bloc_jams_logo.png" alt="bloc jams logo">
+        </a>
     </nav>
     <div>
     <div class="hero-content">
