checkout-8-Animation Final commit

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         <h3>Turn the music up!</h3>
         <h1 class="hero-title">Turn the music up!</h1>
         </div>
-        
 
     <section class="selling-points container">   
         <div class="point column third">
@@ -42,5 +41,6 @@
             <span class="ion-iphone"></span>
             <h5 class="point-title">Mobile enables</h5>
             <p class="point-description">Listen to your music on the go. This streaming service is available on all mobile platforms.</p></div>
+        <script src="scripts/landing.js"></script>
     </body>
 </html>
