--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             <h5 class="point-title">Mobile enables</h5>
             <p class="point-description">Listen to your music on the go. This streaming service is available on all mobile platforms.</p></div>
         </section>
+        <script src="scripts/utlities.js"></script>
         <script src="scripts/landing.js"></script>
     </body>
 </html>
